--- a/learn-spring-dependency/pom.xml
+++ b/learn-spring-dependency/pom.xml
@@ -21,5 +21,9 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+        </dependency>
     </dependencies>
 </project>
