--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
                 <artifactId>spring-jdbc</artifactId>
                 <version>${org.spring.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webflux</artifactId>
+                <version>${org.spring.version}</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
