--- a/pom.xml
+++ b/pom.xml
@@ -8,22 +8,27 @@
     <name>thinking-in-spring</name>
     <packaging>pom</packaging>
     <properties>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <java.version>1.8</java.version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <java.version>17</java.version>
         <org.spring.version>6.0.4</org.spring.version>
+        <lombok.verion>1.18.26</lombok.verion>
     </properties>
 
     <modules>
         <module>learn-spring-dependency</module>
         <module>learn-ioc</module>
-        <module>java-beans-ioc</module>
     </modules>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
+                <version>${org.spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
                 <version>${org.spring.version}</version>
             </dependency>
 
@@ -37,7 +42,18 @@
                 <artifactId>spring-webflux</artifactId>
                 <version>${org.spring.version}</version>
             </dependency>
-        </dependencies>
 
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webflux</artifactId>
+                <version>${org.spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.verion}</version>
+                <scope>provided</scope>
+            </dependency>
+        </dependencies>
     </dependencyManagement>
 </project>
