add bean initiation and lazy

--- a/learn-spring-beans/spring-beans-overview/pom.xml
+++ b/learn-spring-beans/spring-beans-overview/pom.xml
@@ -23,6 +23,10 @@
             <groupId>${groupId}</groupId>
             <artifactId>ioc-container-overview</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
