--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <java.version>17</java.version>
         <org.spring.version>6.0.7</org.spring.version>
         <lombok.verion>1.18.26</lombok.verion>
+        <javax.annotation.version>1.3.2</javax.annotation.version>
     </properties>
 
     <modules>
@@ -54,6 +55,12 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok.verion}</version>
                 <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${javax.annotation.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
