add destroy bean

--- a/learn-spring-beans/spring-beans-overview/pom.xml
+++ b/learn-spring-beans/spring-beans-overview/pom.xml
@@ -23,9 +23,13 @@
             <groupId>${groupId}</groupId>
             <artifactId>ioc-container-overview</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
     </dependencies>
 
