--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <org.spring.version>6.0.7</org.spring.version>
         <lombok.verion>1.18.26</lombok.verion>
         <javax.annotation.version>1.3.2</javax.annotation.version>
+        <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
+
     </properties>
 
     <modules>
@@ -62,6 +64,13 @@
                 <artifactId>javax.annotation-api</artifactId>
                 <version>${javax.annotation.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api -->
+            <dependency>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>${jakarta.annotation.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
