--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <lombok.verion>1.18.26</lombok.verion>
         <javax.annotation.version>1.3.2</javax.annotation.version>
         <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
+        <jakarta.inject.version>2.0.1</jakarta.inject.version>
 
     </properties>
 
@@ -69,6 +70,11 @@
                 <groupId>jakarta.annotation</groupId>
                 <artifactId>jakarta.annotation-api</artifactId>
                 <version>${jakarta.annotation.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.inject</groupId>
+                <artifactId>jakarta.inject-api</artifactId>
+                <version>${jakarta.inject.version}</version>
             </dependency>
 
         </dependencies>
