--- a/learn-spring-beans/pom.xml
+++ b/learn-spring-beans/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>spring-beans-overview</module>
+        <module>spring-beans-scope</module>
     </modules>
     <dependencyManagement>
         <dependencies>
